# bull-alert

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: main.py  pyproject.toml
backend/docker/: Dockerfile
backend/scripts/: format.sh  test.sh
backend/src/: main.py
backend/src/apps/services/: etherscan.py  schemas.py
backend/src/apps/services/tests/: test_etherscan.py
backend/src/apps/users/: fixtures.py  models.py
backend/src/apps/users/endpoints/: users.py
backend/src/core/: api_routing.py  config.py  database.py
deployment/config/: .env.template
