[build-system]
requires = ["poetry==1.1.4"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "bull-alert"
description = ""
version = "0.0.1"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "3.9.2"

psycopg2 = "^2.8.6"
python-decouple = "^3.4"
fastapi = "^0.70.0"
black = "^21.9b0"
pydantic = {version = "^1.7.3", extras = ["dotenv"]}
isort = "^5.7.0"
autoflake = "^1.4"
flake8 = "^3.8.4"
httpx = "^0.16.1"
pytest = "^6.2.5"
